--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ic-reactor/svelte",
   "version": "0.1.1",
-  "description": "A library for intracting with the Internet Computer canisters",
+  "description": "A Svelte library for interacting with Internet Computer canisters",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
