--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "liveServer.settings.port": 3001
+  "liveServer.settings.port": 3001,
+  "deno.enable": false
 }
